<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="0dp"
    android:layout_weight="2"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/project_name"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="normal|bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/meeting_state"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="normal|bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/deportment"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="normal|bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/reserved_person"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="normal|bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/contact_type"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="normal|bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/sheduled_time"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:textStyle="normal|bold" />

</LinearLayout>